Feat: 모임 개설 파트(MeetingCreation) 레아이웃, UI 작업
- MeetingCreationVC와 MeetingCreationDetailVC 전체적인 레아이웃 및 UI 작업 완료
- MeetingCreationDetailVC: 각 섹션 별로 custom UI를 만들어 최대한 ViewController의 부하 감소
- MeetingCreationDetailVC: ScrollView 안에 StackView를 통해 레이아웃 구현, StackView 내에 UI 요소들 배치
- Constant 파일 추가, 해당 파일 통해 상수 관리
- Assets에 폴더 생성 후 해당 파트에서 쓰이는 이미지 추가
- 폰트 폴더 및 파일 추가

--- a/jaksim_ios/MeetingCreation/CategoryCollectionViewCell.xib
+++ b/jaksim_ios/MeetingCreation/CategoryCollectionViewCell.xib
@@ -35,6 +35,7 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="986-h1-cmG" firstAttribute="top" secondItem="j8x-H3-UDA" secondAttribute="top" constant="24" id="I84-rV-YsS"/>
+                            <constraint firstAttribute="bottom" secondItem="yM5-ab-Yfd" secondAttribute="bottom" constant="17" id="IVc-bf-2CZ"/>
                             <constraint firstItem="yM5-ab-Yfd" firstAttribute="top" secondItem="986-h1-cmG" secondAttribute="bottom" constant="8" id="Id4-u3-ED6"/>
                             <constraint firstItem="yM5-ab-Yfd" firstAttribute="centerX" secondItem="j8x-H3-UDA" secondAttribute="centerX" id="sOT-hq-3T4"/>
                             <constraint firstItem="986-h1-cmG" firstAttribute="centerX" secondItem="j8x-H3-UDA" secondAttribute="centerX" id="yLQ-9c-OgI"/>
