--- a/jaksim_ios/Member/MemberStoryboard.storyboard
+++ b/jaksim_ios/Member/MemberStoryboard.storyboard
@@ -282,6 +282,93 @@
             </objects>
             <point key="canvasLocation" x="50.724637681159422" y="77.678571428571431"/>
         </scene>
+        <!--Member Alert View Controller-->
+        <scene sceneID="Te4-Wh-FyM">
+            <objects>
+                <viewController storyboardIdentifier="MemberAlertViewController" id="Xq8-ZH-yfv" customClass="MemberAlertViewController" customModule="jaksim_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rhn-ML-nXH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nq9-Wn-fAi">
+                                <rect key="frame" x="67.5" y="380.5" width="279" height="135"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Wnb-6W-eqH">
+                                        <rect key="frame" x="0.0" y="20" width="279" height="49"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="응원하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2FV-mq-RIX">
+                                                <rect key="frame" x="110" y="0.0" width="59" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="응원을 보낼까요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UhP-7g-DzC">
+                                                <rect key="frame" x="81.5" y="28.5" width="116" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.25882352941176467" green="0.25882352941176467" blue="0.25882352941176467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhr-2k-YRK">
+                                        <rect key="frame" x="0.0" y="85" width="279" height="1"/>
+                                        <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="DWl-fm-VbZ"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3T-VB-VmU">
+                                        <rect key="frame" x="0.0" y="86" width="279" height="49"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2tK-5T-DRy">
+                                                <rect key="frame" x="0.0" y="0.0" width="139.5" height="49"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="취소"/>
+                                            </button>
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-3J-bU8">
+                                                <rect key="frame" x="139.5" y="0.0" width="1" height="49"/>
+                                                <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="1" id="UZb-l1-4Yf"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H3S-Bi-2oK">
+                                                <rect key="frame" x="140.5" y="0.0" width="138.5" height="49"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="확인"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Wnb-6W-eqH" firstAttribute="leading" secondItem="nq9-Wn-fAi" secondAttribute="leading" id="12h-CC-SeF"/>
+                                    <constraint firstAttribute="trailing" secondItem="Wnb-6W-eqH" secondAttribute="trailing" id="8xM-Tm-JOt"/>
+                                    <constraint firstItem="dhr-2k-YRK" firstAttribute="top" secondItem="Wnb-6W-eqH" secondAttribute="bottom" constant="16" id="As7-bS-aDC"/>
+                                    <constraint firstAttribute="height" constant="135" id="Bvr-R6-WF0"/>
+                                    <constraint firstAttribute="width" constant="279" id="QOY-T8-nSa"/>
+                                    <constraint firstItem="dhr-2k-YRK" firstAttribute="leading" secondItem="nq9-Wn-fAi" secondAttribute="leading" id="azi-jC-Py0"/>
+                                    <constraint firstAttribute="bottom" secondItem="y3T-VB-VmU" secondAttribute="bottom" id="rCH-AB-vZw"/>
+                                    <constraint firstAttribute="trailing" secondItem="dhr-2k-YRK" secondAttribute="trailing" id="sbD-Ai-19V"/>
+                                    <constraint firstItem="y3T-VB-VmU" firstAttribute="leading" secondItem="nq9-Wn-fAi" secondAttribute="leading" id="suh-K6-Box"/>
+                                    <constraint firstItem="Wnb-6W-eqH" firstAttribute="top" secondItem="nq9-Wn-fAi" secondAttribute="top" constant="20" id="ufJ-s4-P8o"/>
+                                    <constraint firstItem="y3T-VB-VmU" firstAttribute="top" secondItem="dhr-2k-YRK" secondAttribute="bottom" id="wvp-Dm-51d"/>
+                                    <constraint firstAttribute="trailing" secondItem="y3T-VB-VmU" secondAttribute="trailing" id="xOV-0G-EMT"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="TuR-jv-fgO"/>
+                        <color key="backgroundColor" white="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nq9-Wn-fAi" firstAttribute="centerY" secondItem="Rhn-ML-nXH" secondAttribute="centerY" id="sCR-qf-FOq"/>
+                            <constraint firstItem="nq9-Wn-fAi" firstAttribute="centerX" secondItem="Rhn-ML-nXH" secondAttribute="centerX" id="v8O-eU-dca"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="osL-2d-bpx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="756.52173913043487" y="79.6875"/>
+        </scene>
     </scenes>
     <resources>
         <namedColor name="AccentColor">
